--- a/go.html
+++ b/go.html
@@ -10,7 +10,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXX', { debug_mode: true });
+    gtag('config', 'G-GBHTQL5DJ9', { debug_mode: true });
   </script>
 </head>
 <body>
