--- a/go.html
+++ b/go.html
@@ -5,7 +5,7 @@
   <title>Redirecting…</title>
 
   <!-- GA4 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-REPLACE_ME"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GBHTQL5DJ9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
